[B]1.1.1:[/B]
- #155 přidána podpora oblíbených a uživatelských souborů (zatím pouze zobrazení)
[B]1.1.0:[/B]
- přidán fastshare.cz (zatím pouze FREE stahování)
- přesunuty provider skripty
[B]1.0.7:[/B]
- ulozto nyní umožňuje vyhledávát všechny typy souborů a filtrovat dle přípony
[B]1.0.4:[/B]
- verze++ kvuli update v stream.resolveru
[B]1.0.3:[/B]
- přidáno nové nastavení pro hellspy pro možnost použití slovenského mirroru http://stiahnito.sk
- oprava přehrávání/stahování y ulozto
- oprava zobrazování captcha na windows (bezvadata)
[B]1.0.2:[/B]
- verze++ kvuli update v stream.resolveru
[B]1.0.1:[/B]
- oprava stahování z bezvadata (zatím bez přihlášení)
- přidáno logování, hlavně na ulozto
- oprava hromadného vyhledávání, kdy chyba na některém servru neblokuje 
vyhledávání na jiných
[B]1.0.0:[/B]
Initial version