@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.online-files"
        name="Soubory Online"
-       version="1.1.1"
+       version="1.1.2"
        provider-name="Libor Zoubek">
   <requires>
     <import addon="xbmc.python" version="2.0" />
-    <import addon="script.module.stream.resolver" version="1.5.7" />
+    <import addon="script.module.stream.resolver" version="1.6.3" />
   </requires>
   <extension point="xbmc.python.pluginsource"
              provides="video"
